--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-library",
+  "name": "@parsaaghayi/sep-panel-ui",
   "version": "0.0.1",
   "description": "hooshmand sepehr react component library",
   "scripts": {
@@ -8,7 +8,14 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "author": "parsa aghayi",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/parsaaghayi/sep-panel-ui.git"
+  },
+  "keywords": [
+    "ui-kit"
+  ],
+  "author": "parsaaghayi",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.24.5",
