--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rollup -c --bundleConfigAsCjs",
     "test": "jest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "publishpack": "npm publish --dry-run && npm publish --access=public"
   },
   "repository": {
     "type": "git",
