--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@parsaaghayi/sep-panel-ui",
-  "version": "0.0.17",
-  "description": "hooshmand sepehr react component library",
+  "version": "0.0.18",
+  "description": "hooshmand sepehr react component library, this UI Kit is based on attlasian design system",
   "scripts": {
     "build": "rmdir /s dist && rollup -c --bundleConfigAsCjs",
     "test": "jest",
