--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@parsaaghayi/sep-panel-ui",
   "version": "0.0.18",
-  "description": "hooshmand sepehr react component library, this UI Kit is based on attlasian design system",
+  "description": "This is a React UI kit for Hooshmand Sepehr company panel projects, this UI Kit is based on attlasian design system",
   "scripts": {
     "build": "rmdir /s dist && rollup -c --bundleConfigAsCjs",
     "test": "jest",
@@ -14,7 +14,8 @@
     "url": "git+https://github.com/parsaaghayi/sep-panel-ui.git"
   },
   "keywords": [
-    "ui-kit"
+    "ui-kit",
+    "attlasian"
   ],
   "author": "parsaaghayi",
   "license": "MIT",
