--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@parsaaghayi/sep-panel-ui",
   "version": "0.0.23",
-  "description": "This is a React UI kit for Hooshmand Sepehr company panel projects, this UI Kit is based on attlasian design system",
+  "description": "This is a React UI kit for Hooshmand Sepehr company panel projects, this UI Kit is based on atlassian design system",
   "scripts": {
     "build": "rmdir /s dist && rollup -c --bundleConfigAsCjs",
     "test": "jest",
@@ -15,7 +15,7 @@
   },
   "keywords": [
     "ui-kit",
-    "attlasian"
+    "atlassian"
   ],
   "author": "parsaaghayi",
   "license": "MIT",
