--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@parsaaghayi/sep-panel-ui",
-  "version": "0.0.47",
+  "version": "0.0.59",
   "description": "This is a React UI kit for Hooshmand Sepehr company panel projects, this UI Kit is based on atlassian design system",
   "scripts": {
     "build": "rmdir /s dist && rollup -c --bundleConfigAsCjs",
@@ -48,10 +48,15 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.0.9",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
