--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.3.1 || ^19.0.0",
+    "react-dom": "^18.3.1 || ^19.0.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
